add keyphrases to the doc

--- a/Introduction.ipynb
+++ b/Introduction.ipynb
@@ -37,86 +37,86 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2018-05-08 21:49:41,607:INFO: Parsing key file\n",
-      "2018-05-08 21:49:41,612:INFO: 97 documents found in key file\n",
-      "2018-05-08 21:49:41,614:WARNING: Skipping pdf Afghanistan_2014_National%20Cybersecurity%20Strategy%20of%20Afghanistan%20%28November2014%29.pdf\n",
-      "2018-05-08 21:49:41,615:INFO: Reading Kenya_2014_GOK-national-cybersecurity-strategy.pdf from text file\n",
-      "2018-05-08 21:49:41,619:INFO: Reading Korea_RepublicOf_2011_KOR_NCSS_2011.pdf from text file\n",
-      "2018-05-08 21:49:41,624:INFO: Reading Russia_2000.pdf from text file\n",
-      "2018-05-08 21:49:41,630:INFO: Reading Australia_2009_AG%20Cyber%20Security%20Strategy%20-%20for%20website.pdf from text file\n",
-      "2018-05-08 21:49:41,636:INFO: Reading Australia_2016_Cyber-Strategy.pdf from text file\n",
-      "2018-05-08 21:49:41,640:INFO: Reading Latvia_2014_LVA_CSS_2014-2018.pdf from text file\n",
-      "2018-05-08 21:49:41,645:INFO: Reading Rwanda%20NCSS%20NICI_III.pdf from text file\n",
-      "2018-05-08 21:49:41,660:INFO: Reading Austria_2013_130415_strategie_cybersicherheit_en_web.pdf from text file\n",
-      "2018-05-08 21:49:41,668:INFO: Reading Lithuania_2011_EIS%28KS%29PP_796_2011-06-29_EN_PATAIS.pdf from text file\n",
-      "2018-05-08 21:49:41,672:INFO: Reading SaudiArabia_NISS_Draft_7_EN.pdf from text file\n",
-      "2018-05-08 21:49:41,683:INFO: Reading LUXEMBOURG_NCSS.pdf from text file\n",
-      "2018-05-08 21:49:41,688:INFO: Reading Bangladesh_10041_41196.pdf from text file\n",
-      "2018-05-08 21:49:41,692:INFO: Reading Malawi_2013_Malawi_ICT_Policy.pdf from text file\n",
-      "2018-05-08 21:49:41,695:INFO: Reading Singapore_2013_AnnexA.pdf from text file\n",
-      "2018-05-08 21:49:41,698:INFO: Reading singapore_2016_cybersecuritystrategy.pdf from text file\n",
-      "2018-05-08 21:49:41,704:INFO: Reading Malaysia_2006_NCSP-Policy2.pdf from text file\n",
-      "2018-05-08 21:49:41,711:INFO: Reading Slovakia_2008_National_Strategy_for_ISEC.pdf from text file\n",
-      "2018-05-08 21:49:41,719:INFO: Reading SLOVAKIA_NCSS%20-2.pdf from text file\n",
-      "2018-05-08 21:49:41,723:INFO: Reading Malta_2014_Digital%20Malta%202014%20-%202020.pdf from text file\n",
-      "2018-05-08 21:49:41,727:INFO: Reading Mita%20_Malta%20Cyber%20Security%20Strategy%20-%20Book.pdf from text file\n",
-      "2018-05-08 21:49:41,730:INFO: Reading Slovenia_2016_Cyber_Security_Strategy.pdf from text file\n",
-      "2018-05-08 21:49:41,739:INFO: Reading SouthAfrica_2010_100219cybersecurity.pdf from text file\n",
-      "2018-05-08 21:49:41,753:WARNING: Skipping pdf Brunei_2010_unpan042980.pdf\n",
-      "2018-05-08 21:49:41,758:WARNING: Skipping pdf Mauritius_2014_National%20Cyber%20Security%20Strategy%20-%202014%20-%20EN.pdf\n",
-      "2018-05-08 21:49:41,760:INFO: Reading Spain_2013_NCSS_ESen.pdf from text file\n",
-      "2018-05-08 21:49:41,764:INFO: Reading Canada_2010_cbr-scrt-strtgy-eng.pdf from text file\n",
-      "2018-05-08 21:49:41,772:INFO: Reading Micronesia_2012_ict-policy2012.pdf from text file\n",
-      "2018-05-08 21:49:41,779:INFO: Reading Sweden_2006_Strategy_Internet_security_2006_12_July_2006.pdf from text file\n",
-      "2018-05-08 21:49:41,782:INFO: Reading Chile_NCSP%20%28ENG%29.pdf from text file\n",
-      "2018-05-08 21:49:41,787:INFO: Reading Moldova_2013_strateg_857_en.pdf from text file\n",
-      "2018-05-08 21:49:41,790:INFO: Reading Switzerland_2012_National_strategy_for_the_protection_of_Switzerland_against_cyber_risks-EN.pdf from text file\n",
-      "2018-05-08 21:49:41,794:INFO: Reading China_2006.pdf from text file\n",
-      "2018-05-08 21:49:41,797:INFO: Reading Montenegro_2013_Cyber%20Security%20Strategy%20for%20Montenegro.pdf from text file\n",
-      "2018-05-08 21:49:41,800:INFO: Reading TrinidadTobago_2012_National_Cyber_Security%20Strategy_Final.pdf from text file\n",
-      "2018-05-08 21:49:41,804:INFO: Reading Colombia_2011_articles-3510_documento.pdf from text file\n",
-      "2018-05-08 21:49:41,807:INFO: Reading Morocco_2013_Maroc_CyberSecurity_2013_ENG.pdf from text file\n",
-      "2018-05-08 21:49:41,810:INFO: Reading Croatia%20CR%20NCSS%20EN.pdf from text file\n",
-      "2018-05-08 21:49:41,815:INFO: Reading Netherlands_2013_national-cyber-security-strategy-2_tcm92-520278.pdf from text file\n",
-      "2018-05-08 21:49:41,826:INFO: Reading Netherlands_2012_NDL-Cyber_StrategyEng.pdf from text file\n",
-      "2018-05-08 21:49:41,836:INFO: Reading Uganda_2014_National%20Information%20Security%20Policy%20v1.0_0.pdf from text file\n",
-      "2018-05-08 21:49:41,839:INFO: Reading Cyprus_2012_CY%20NCSS.pdf from text file\n",
-      "2018-05-08 21:49:41,842:INFO: Reading NewZealand_2011_nz-cyber-security-strategy-june-2011_0.pdf from text file\n",
-      "2018-05-08 21:49:41,845:INFO: Reading nz-cyber-security-action-plan-december-2015.pdf from text file\n",
-      "2018-05-08 21:49:41,848:INFO: Reading nz-cyber-security-cybercrime-plan-december-2015.pdf from text file\n",
-      "2018-05-08 21:49:41,851:INFO: Reading nz-cyber-security-strategy-december-2015.pdf from text file\n",
-      "2018-05-08 21:49:41,856:INFO: Reading nz-cyber-security-summary-december-2015.pdf from text file\n",
-      "2018-05-08 21:49:41,861:INFO: Reading UK_2011_uk-cyber-security-strategy-final.pdf from text file\n",
-      "2018-05-08 21:49:41,864:INFO: Reading national_cyber_security_strategy.pdf from text file\n",
-      "2018-05-08 21:49:41,869:INFO: Reading Czech_2012_20120209strategieprooblastkbnbuen.pdf from text file\n",
-      "2018-05-08 21:49:41,872:INFO: Reading National%20Cyber%20Security%20Strategy%20-%20Czech%20Republic.pdf from text file\n",
-      "2018-05-08 21:49:41,875:INFO: Reading Nigeria_2014_NATIONAL_CYBESECURITY_STRATEGY.pdf from text file\n",
-      "2018-05-08 21:49:41,880:INFO: Reading UnitedStates_2003_cyberspace_strategy.pdf from text file\n",
-      "2018-05-08 21:49:41,888:WARNING: Skipping pdf UnitedStates_2009_Cyberspace_Policy_Review_final_0.pdf\n",
-      "2018-05-08 21:49:41,889:INFO: Reading UnitedStates_2015_Final_2015_DoD_CYBER_STRATEGY_for_web.pdf from text file\n",
-      "2018-05-08 21:49:41,893:INFO: Reading Denmark_2015_DK_NCSS.pdf from text file\n",
-      "2018-05-08 21:49:41,895:INFO: Reading Danish_NCSS.pdf from text file\n",
-      "2018-05-08 21:49:41,898:INFO: Reading Norway_2012_Cyber_Security_Strategy_Norway.pdf from text file\n",
-      "2018-05-08 21:49:41,904:INFO: Reading Egypt_2012.pdf from text file\n",
-      "2018-05-08 21:49:41,909:INFO: Reading Estonia_2014_cyber_security_strategy_2014-2017_public_version.pdf from text file\n",
-      "2018-05-08 21:49:41,913:INFO: Reading Philippine_2005_National%20Cyber%20Security%20Plan%202005.pdf from text file\n",
-      "2018-05-08 21:49:41,916:INFO: Reading Finland_2013_s_Cyber_Security_Strategy.pdf from text file\n",
-      "2018-05-08 21:49:41,919:INFO: Reading Poland_2013_copy_of_PO_NCSS.pdf from text file\n",
-      "2018-05-08 21:49:41,922:INFO: Reading France_2011_2011-02-15_Information_system_defence_and_security_-_France_s_strategy.pdf from text file\n",
-      "2018-05-08 21:49:41,925:INFO: Reading NCSS_FRANCE.pdf from text file\n",
-      "2018-05-08 21:49:41,928:INFO: Reading Portuguese_National_Cyberspace_Security_Strategy_EN.pdf from text file\n",
-      "2018-05-08 21:49:41,930:INFO: Reading Georgia_2012_National%20Cyber%20Security%20Strategy%20of%20Georgia_ENG.pdf from text file\n",
-      "2018-05-08 21:49:41,933:INFO: Reading Qatar_2014_national_cyber_security_strategy.pdf from text file\n",
-      "2018-05-08 21:49:41,936:INFO: Reading Germany_2011_Cyber_Security_Strategy_for_Germany.pdf from text file\n",
-      "2018-05-08 21:49:41,942:INFO: Reading Hungary_2013_HU_NCSS.pdf from text file\n",
-      "2018-05-08 21:49:41,949:INFO: Reading Iceland_2015_NationalCyberSecuritySummary.pdf from text file\n",
-      "2018-05-08 21:49:41,952:INFO: Reading India_2013_National_cyber_security_policy-2013%281%29.pdf from text file\n",
-      "2018-05-08 21:49:41,955:INFO: Reading Ireland_2015_NationalCyberSecurityStrategy20152017.pdf from text file\n",
-      "2018-05-08 21:49:41,958:INFO: Reading Israel_2011_Advancing%20National%20Cyberspace%20Capabilities.pdf from text file\n",
-      "2018-05-08 21:49:41,961:WARNING: Skipping pdf Italy_2013_italian-national-strategic-framework-for-cyberspace-security.pdf\n",
-      "2018-05-08 21:49:41,963:INFO: Reading Jamaica_2015_Jamaica%20National%20Cyber%20Security%20Strategy.pdf from text file\n",
-      "2018-05-08 21:49:41,971:WARNING: Skipping pdf Japan_2015_cs-strategy-en.pdf\n",
-      "2018-05-08 21:49:41,973:INFO: Reading Jordan_2012_NIACSS.pdf from text file\n"
+      "2018-07-28 19:48:33,750:INFO: Parsing key file\n",
+      "2018-07-28 19:48:33,755:INFO: 97 documents found in key file\n",
+      "2018-07-28 19:48:33,758:WARNING: Skipping pdf Afghanistan_2014_National%20Cybersecurity%20Strategy%20of%20Afghanistan%20%28November2014%29.pdf\n",
+      "2018-07-28 19:48:33,759:INFO: Reading Kenya_2014_GOK-national-cybersecurity-strategy.pdf from text file\n",
+      "2018-07-28 19:48:33,763:INFO: Reading Korea_RepublicOf_2011_KOR_NCSS_2011.pdf from text file\n",
+      "2018-07-28 19:48:33,771:INFO: Reading Russia_2000.pdf from text file\n",
+      "2018-07-28 19:48:33,777:INFO: Reading Australia_2009_AG%20Cyber%20Security%20Strategy%20-%20for%20website.pdf from text file\n",
+      "2018-07-28 19:48:33,785:INFO: Reading Australia_2016_Cyber-Strategy.pdf from text file\n",
+      "2018-07-28 19:48:33,791:INFO: Reading Latvia_2014_LVA_CSS_2014-2018.pdf from text file\n",
+      "2018-07-28 19:48:33,794:INFO: Reading Rwanda%20NCSS%20NICI_III.pdf from text file\n",
+      "2018-07-28 19:48:33,799:INFO: Reading Austria_2013_130415_strategie_cybersicherheit_en_web.pdf from text file\n",
+      "2018-07-28 19:48:33,802:INFO: Reading Lithuania_2011_EIS%28KS%29PP_796_2011-06-29_EN_PATAIS.pdf from text file\n",
+      "2018-07-28 19:48:33,810:INFO: Reading SaudiArabia_NISS_Draft_7_EN.pdf from text file\n",
+      "2018-07-28 19:48:33,814:INFO: Reading LUXEMBOURG_NCSS.pdf from text file\n",
+      "2018-07-28 19:48:33,822:INFO: Reading Bangladesh_10041_41196.pdf from text file\n",
+      "2018-07-28 19:48:33,827:INFO: Reading Malawi_2013_Malawi_ICT_Policy.pdf from text file\n",
+      "2018-07-28 19:48:33,834:INFO: Reading Singapore_2013_AnnexA.pdf from text file\n",
+      "2018-07-28 19:48:33,839:INFO: Reading singapore_2016_cybersecuritystrategy.pdf from text file\n",
+      "2018-07-28 19:48:33,845:INFO: Reading Malaysia_2006_NCSP-Policy2.pdf from text file\n",
+      "2018-07-28 19:48:33,849:INFO: Reading Slovakia_2008_National_Strategy_for_ISEC.pdf from text file\n",
+      "2018-07-28 19:48:33,852:INFO: Reading SLOVAKIA_NCSS%20-2.pdf from text file\n",
+      "2018-07-28 19:48:33,854:INFO: Reading Malta_2014_Digital%20Malta%202014%20-%202020.pdf from text file\n",
+      "2018-07-28 19:48:33,857:INFO: Reading Mita%20_Malta%20Cyber%20Security%20Strategy%20-%20Book.pdf from text file\n",
+      "2018-07-28 19:48:33,863:INFO: Reading Slovenia_2016_Cyber_Security_Strategy.pdf from text file\n",
+      "2018-07-28 19:48:33,876:INFO: Reading SouthAfrica_2010_100219cybersecurity.pdf from text file\n",
+      "2018-07-28 19:48:33,879:WARNING: Skipping pdf Brunei_2010_unpan042980.pdf\n",
+      "2018-07-28 19:48:33,879:WARNING: Skipping pdf Mauritius_2014_National%20Cyber%20Security%20Strategy%20-%202014%20-%20EN.pdf\n",
+      "2018-07-28 19:48:33,880:INFO: Reading Spain_2013_NCSS_ESen.pdf from text file\n",
+      "2018-07-28 19:48:33,886:INFO: Reading Canada_2010_cbr-scrt-strtgy-eng.pdf from text file\n",
+      "2018-07-28 19:48:33,892:INFO: Reading Micronesia_2012_ict-policy2012.pdf from text file\n",
+      "2018-07-28 19:48:33,895:INFO: Reading Sweden_2006_Strategy_Internet_security_2006_12_July_2006.pdf from text file\n",
+      "2018-07-28 19:48:33,898:INFO: Reading Chile_NCSP%20%28ENG%29.pdf from text file\n",
+      "2018-07-28 19:48:33,901:INFO: Reading Moldova_2013_strateg_857_en.pdf from text file\n",
+      "2018-07-28 19:48:33,905:INFO: Reading Switzerland_2012_National_strategy_for_the_protection_of_Switzerland_against_cyber_risks-EN.pdf from text file\n",
+      "2018-07-28 19:48:33,914:INFO: Reading China_2006.pdf from text file\n",
+      "2018-07-28 19:48:33,918:INFO: Reading Montenegro_2013_Cyber%20Security%20Strategy%20for%20Montenegro.pdf from text file\n",
+      "2018-07-28 19:48:33,923:INFO: Reading TrinidadTobago_2012_National_Cyber_Security%20Strategy_Final.pdf from text file\n",
+      "2018-07-28 19:48:33,928:INFO: Reading Colombia_2011_articles-3510_documento.pdf from text file\n",
+      "2018-07-28 19:48:33,931:INFO: Reading Morocco_2013_Maroc_CyberSecurity_2013_ENG.pdf from text file\n",
+      "2018-07-28 19:48:33,934:INFO: Reading Croatia%20CR%20NCSS%20EN.pdf from text file\n",
+      "2018-07-28 19:48:33,937:INFO: Reading Netherlands_2013_national-cyber-security-strategy-2_tcm92-520278.pdf from text file\n",
+      "2018-07-28 19:48:33,939:INFO: Reading Netherlands_2012_NDL-Cyber_StrategyEng.pdf from text file\n",
+      "2018-07-28 19:48:33,943:INFO: Reading Uganda_2014_National%20Information%20Security%20Policy%20v1.0_0.pdf from text file\n",
+      "2018-07-28 19:48:33,946:INFO: Reading Cyprus_2012_CY%20NCSS.pdf from text file\n",
+      "2018-07-28 19:48:33,951:INFO: Reading NewZealand_2011_nz-cyber-security-strategy-june-2011_0.pdf from text file\n",
+      "2018-07-28 19:48:33,957:INFO: Reading nz-cyber-security-action-plan-december-2015.pdf from text file\n",
+      "2018-07-28 19:48:33,965:INFO: Reading nz-cyber-security-cybercrime-plan-december-2015.pdf from text file\n",
+      "2018-07-28 19:48:33,968:INFO: Reading nz-cyber-security-strategy-december-2015.pdf from text file\n",
+      "2018-07-28 19:48:33,971:INFO: Reading nz-cyber-security-summary-december-2015.pdf from text file\n",
+      "2018-07-28 19:48:33,974:INFO: Reading UK_2011_uk-cyber-security-strategy-final.pdf from text file\n",
+      "2018-07-28 19:48:33,978:INFO: Reading national_cyber_security_strategy.pdf from text file\n",
+      "2018-07-28 19:48:33,981:INFO: Reading Czech_2012_20120209strategieprooblastkbnbuen.pdf from text file\n",
+      "2018-07-28 19:48:33,984:INFO: Reading National%20Cyber%20Security%20Strategy%20-%20Czech%20Republic.pdf from text file\n",
+      "2018-07-28 19:48:33,990:INFO: Reading Nigeria_2014_NATIONAL_CYBESECURITY_STRATEGY.pdf from text file\n",
+      "2018-07-28 19:48:33,996:INFO: Reading UnitedStates_2003_cyberspace_strategy.pdf from text file\n",
+      "2018-07-28 19:48:33,999:WARNING: Skipping pdf UnitedStates_2009_Cyberspace_Policy_Review_final_0.pdf\n",
+      "2018-07-28 19:48:34,001:INFO: Reading UnitedStates_2015_Final_2015_DoD_CYBER_STRATEGY_for_web.pdf from text file\n",
+      "2018-07-28 19:48:34,004:INFO: Reading Denmark_2015_DK_NCSS.pdf from text file\n",
+      "2018-07-28 19:48:34,007:INFO: Reading Danish_NCSS.pdf from text file\n",
+      "2018-07-28 19:48:34,010:INFO: Reading Norway_2012_Cyber_Security_Strategy_Norway.pdf from text file\n",
+      "2018-07-28 19:48:34,015:INFO: Reading Egypt_2012.pdf from text file\n",
+      "2018-07-28 19:48:34,023:INFO: Reading Estonia_2014_cyber_security_strategy_2014-2017_public_version.pdf from text file\n",
+      "2018-07-28 19:48:34,027:INFO: Reading Philippine_2005_National%20Cyber%20Security%20Plan%202005.pdf from text file\n",
+      "2018-07-28 19:48:34,030:INFO: Reading Finland_2013_s_Cyber_Security_Strategy.pdf from text file\n",
+      "2018-07-28 19:48:34,034:INFO: Reading Poland_2013_copy_of_PO_NCSS.pdf from text file\n",
+      "2018-07-28 19:48:34,039:INFO: Reading France_2011_2011-02-15_Information_system_defence_and_security_-_France_s_strategy.pdf from text file\n",
+      "2018-07-28 19:48:34,046:INFO: Reading NCSS_FRANCE.pdf from text file\n",
+      "2018-07-28 19:48:34,049:INFO: Reading Portuguese_National_Cyberspace_Security_Strategy_EN.pdf from text file\n",
+      "2018-07-28 19:48:34,052:INFO: Reading Georgia_2012_National%20Cyber%20Security%20Strategy%20of%20Georgia_ENG.pdf from text file\n",
+      "2018-07-28 19:48:34,054:INFO: Reading Qatar_2014_national_cyber_security_strategy.pdf from text file\n",
+      "2018-07-28 19:48:34,057:INFO: Reading Germany_2011_Cyber_Security_Strategy_for_Germany.pdf from text file\n",
+      "2018-07-28 19:48:34,060:INFO: Reading Hungary_2013_HU_NCSS.pdf from text file\n",
+      "2018-07-28 19:48:34,063:INFO: Reading Iceland_2015_NationalCyberSecuritySummary.pdf from text file\n",
+      "2018-07-28 19:48:34,066:INFO: Reading India_2013_National_cyber_security_policy-2013%281%29.pdf from text file\n",
+      "2018-07-28 19:48:34,070:INFO: Reading Ireland_2015_NationalCyberSecurityStrategy20152017.pdf from text file\n",
+      "2018-07-28 19:48:34,140:INFO: Reading Israel_2011_Advancing%20National%20Cyberspace%20Capabilities.pdf from text file\n",
+      "2018-07-28 19:48:34,145:WARNING: Skipping pdf Italy_2013_italian-national-strategic-framework-for-cyberspace-security.pdf\n",
+      "2018-07-28 19:48:34,146:INFO: Reading Jamaica_2015_Jamaica%20National%20Cyber%20Security%20Strategy.pdf from text file\n",
+      "2018-07-28 19:48:34,150:WARNING: Skipping pdf Japan_2015_cs-strategy-en.pdf\n",
+      "2018-07-28 19:48:34,152:INFO: Reading Jordan_2012_NIACSS.pdf from text file\n"
      ]
     }
    ],
@@ -157,7 +157,7 @@
     {
      "data": {
       "text/plain": [
-       "<cybersecurity_nlp.pipelines.document.Document at 0x1132e9240>"
+       "<cybersecurity_nlp.pipelines.document.Document at 0x115f6f2b0>"
       ]
      },
      "execution_count": 3,
@@ -209,7 +209,7 @@
     {
      "data": {
       "text/plain": [
-       "<cybersecurity_nlp.pipelines.sentence.Sentence at 0x1132f5e10>"
+       "<cybersecurity_nlp.pipelines.sentence.Sentence at 0x11666b320>"
       ]
      },
      "execution_count": 6,
@@ -253,6 +253,35 @@
    ],
    "source": [
     "print(sentences[10].is_bad())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('national information security', 0.2656856213606658),\n",
+       " ('russian federation', 0.18302484112053014),\n",
+       " ('information security', 0.1442977589733796),\n",
+       " ('information sphere', 0.02372537355144084),\n",
+       " ('federal executive body', 0.02291976234770444),\n",
+       " ('information', 0.016165173119703818),\n",
+       " ('state authority', 0.014667772532443949),\n",
+       " ('information resource', 0.012331225520276105),\n",
+       " ('national information', 0.012010180542073309),\n",
+       " ('system', 0.010639134679932726)]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "documents[2].key_terms()"
    ]
   }
  ],
